# realestate_visualizer

./: .gitignore  README.md  aaa.ipynb  analytics.py  app.py  app_estate.py  load.py  mansionmarket.py  mansionreview.py  mansionreview_history.py  pipeline.py  pyproject.toml  requirements.txt  scrap.py  test.py  test_app.py  transform.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
Docker/: Dockerfile  docker-compose.yml
aws/staging/: README.md
aws/staging/mapcreate/: Dockerfile  app_estate.py  requirements.txt
aws/staging/scraping/: lambda_function.py  make_lambda_zip.sh  requirements.txt
djangoSampleApp/: asgi.py  settings.py  urls.py  wsgi.py
extract/: mansionreview.py  mansionreview_history.py  scraping_common.py  suumo.py  utils.py
pages/: app_estate.py
pipelines/: __init__.py  mansionreview.py  suumo.py
pipelines/core/: pipeline.py  utils.py
pipelines/mansionreview/: __init__.py  extract.py  pipeline.py  transform.py
pipelines/suumo/: __init__.py  extract.py  pipeline.py  transform.py
scrap/: mansionreview.py  suumo.py  utils.py
sites/: __init__.py  base.py  mansionreview.py  suumo.py
streamlit/: Home.py  analytics.py  app_estate.py  plateau.py  utils.py
streamlit/pages/: analytics.py  app_estate.py  plateau.py  price3d.py
transform/: mansionreview.py  suumo.py  utils.py
