[project]
name = "realestate-visualizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cmcrameri>=1.9",
    "gpy>=1.13.2",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.11.1",
    "numpy==1.26.4",
    "retry>=0.9.2",
    "selenium>=4.46.0",
    "streamlit>=1.59.2",
    "streamlit-aggrid>=1.2.1.post2",
    "tqdm>=4.69.0",
]
